[package]
name = "sana"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An object-storage-native search database: vectors, full-text, and attribute filters over documents whose only durable home is an object store."
repository = "https://github.com/djakish/sana"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "net", "signal"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
crc32fast = "1"
sha2 = "0.10"
siphasher = "1"
bytes = "1"
thiserror = "2"
half = "2"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
rusty-s3 = "0.9.1"
url = "2.5.8"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "distance"
harness = false
